docs: add Folia support, performance optimization, and JVM optimize flag
Update all docs to reflect:
- Folia as new server software option with plugin compatibility warnings
- Performance optimizer (Aikar's JVM flags + config tuning) with optimize flag
- Updated group config examples to use optimize=true instead of manual args
- SDK docs note Folia incompatibility
- Update command compatibility table includes Folia

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>